2007-05-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/log.py (set_log_file): Return the file handlers stream,
	useful when the application want to use other means to write
	to the same file.

2007-05-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py:
	(SearchSlaveDelegate.disable_search_entry): Add a method to make it
	possible to disable the search entry.
	(DateSearchFilter.set_use_date_entries): New, to disable the
	user selectable date entries
	(DateSearchFilter.get_end_date, DateSearchFilter.get_start_date): New
	accessors
	(DateSearchFilter.select): Add a position argument
	(DateSearchFilter.clear_options): New
	(DateSearchFilter.add_option_fixed)
	(DateSearchFilter.add_option_fixed_interval): New,	
	added methods to make it possible to add fixed dates/interval

2007-05-04  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py:
	* tests/test_ObjectList.py:
	Objectlist does not set a radio column value to true if
	all values are false.
	Fixes #3339

2007-05-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.insert): 
	* tests/test_ObjectList.py (MethodTest.testInsert): 
	Implement, add tests.

2007-05-03  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py: (Masks): It was possible to move the cursor outside
	the editable fields sometimes. Fixes #3333
	* tests/test_masks.py: some tests for this case.

2007-04-30  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add an expander property to the Column.
	Fixes #3336

2007-04-26  Johan Dahlin  <jdahlin@async.com.br>

	* examples/entrymask.py: Add a new example

	* kiwi/__init__.py: Add an explicit version check
	and give up if the version is too old.

2007-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* examples/search.py:
	* kiwi/db/query.py:
	* kiwi/db/sqlobj.py:
	* kiwi/ui/search.py:
